@@ -222,7 +222,7 @@ static Image *ReadLABELImage(const ImageInfo *image_info,
   if (draw_info->gravity == UndefinedGravity)
     {
       (void) FormatLocaleString(geometry,MaxTextExtent,"%+g%+g",
-        -metrics.bounds.x1+draw_info->stroke_width/2.0,metrics.ascent+
+        -metrics.bounds.x1+draw_info->stroke_width/2.0,metrics.bounds.y2+
         draw_info->stroke_width/2.0);
       (void) CloneString(&draw_info->geometry,geometry);
     }
@@ -231,7 +231,7 @@ static Image *ReadLABELImage(const ImageInfo *image_info,
       if (draw_info->direction == RightToLeftDirection)
         (void) FormatLocaleString(geometry,MaxTextExtent,"%+g%+g",
           image->columns-(metrics.bounds.x2+draw_info->stroke_width/2.0),
-          metrics.ascent+draw_info->stroke_width/2.0);
+          metrics.bounds.y2+draw_info->stroke_width/2.0);
       (void) CloneString(&draw_info->geometry,geometry);
     }
   if (SetImageBackgroundColor(image) == MagickFalse)
